# chetyre

servant/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  flash.sh  gdb.cmd  memory.x  send_buffer.S
servant/.cargo/: config
servant/nrf51822/: Cargo.toml  README.md  device.x  lib.rs
servant/nrf51822/src/: aar.rs  adc.rs  ccm.rs  clock.rs  comp.rs  ecb.rs  ficr.rs  gpiote.rs  lib.rs  nvmc.rs  power.rs  ppi.rs  pu.rs  qdec.rs  radio.rs  rng.rs  rtc0.rs  spi0.rs  spis1.rs  temp.rs  timer0.rs  twi0.rs  uart0.rs  uicr.rs  wdt.rs  wucomp.rs
servant/nrf51822/src/ccm/: shorts.rs
servant/nrf51822/src/clock/: hfclkstat.rs  lfclkstat.rs  xtalfreq.rs
servant/nrf51822/src/comp/: enable.rs  mode.rs  refsel.rs  shorts.rs  th.rs
servant/nrf51822/src/gpio/: pin_cnf.rs
servant/nrf51822/src/gpiote/: config.rs
servant/nrf51822/src/nvmc/: eraseprotectedpage.rs
servant/nrf51822/src/power/: ramon.rs  reset.rs  resetreas.rs
servant/nrf51822/src/pu/: patchaddr.rs  patchen.rs  patchenclr.rs  patchenset.rs  replaceaddr.rs
servant/nrf51822/src/qdec/: ledpre.rs  shorts.rs
servant/nrf51822/src/radio/: crccnf.rs  crcpoly.rs  dai.rs  datawhiteiv.rs  rssisample.rs  test.rs
servant/nrf51822/src/rng/: shorts.rs
servant/nrf51822/src/rtc0/: counter.rs  evten.rs  evtenclr.rs  evtenset.rs
servant/nrf51822/src/spi0/: rxd.rs
servant/nrf51822/src/spis1/: amountrx.rs  amounttx.rs
servant/nrf51822/src/twi0/: errorsrc.rs  intenclr.rs  intenset.rs
servant/nrf51822/src/uart0/: baudrate.rs  intenclr.rs  intenset.rs
servant/src/: canvas.rs  main.rs  serial.rs
(+7 files in other folders)
